增加命令